2008-02-08  Alan Watson <Alan.Watson@cern.ch>
        * Change jobOptions to load simulation algorithms from 
          TrigT1CaloSim rather than TrigT1Calo
        * Will work with TrigT1Calo-03-xx-xx only. Branching will
          be needed for further 13.0.x development
        * Tag as TrigT1CaloMonitoring-00-02-00 

2008-02-01  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * tag TrigT1CaloMonitoring-00-01-21
        * add colz option to 2D plots in CPM monitoring

2008-01-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * tag TrigT1CaloMonitoring-00-01-20
        * add TriggerMenu-File for LVL1ConfigSvc in JO
	
2008-01-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * tag TrigT1CaloMonitoring-00-01-19
        * fix memory leaks
        * remove unnecessary data duplication
        * eliminate compiler warning messages

2008-01-24  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
	* tag TrigT1CaloMonitoring-00-01-18
        * updates to TrigT1CaloCpmMonTool.

2007-12-18  David Quarrie <David.Quarrie@cern.ch>
	* tag TrigT1CaloMonitoring-00-01-17
	* src/MonHelper.cxx: Add include "TMath.h" for LCG_54 compatibility

2007-12-14  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-16
	* Update JOs to Configurables
	* remove unchecked statuscodes and unnecessary histos

2007-12-03  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-15
	* Tag for Diploma Thesis

2007-10-28  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-14
	* Add tool for ADC-Timing monitoring

2007-10-28  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-13
	* book histograms only at start-up
	* change wrong filling of CMM errors
	* make energy ranges for all energy histograms configurable
	* execute procHists only in offline
	* adjust monitoring to CP firmware in JEP CMMs (JEM-number-shift between JEM-number and CMM-JEM-number)
